section 7 was added

--- a/index.html
+++ b/index.html
@@ -384,10 +384,23 @@
       </div>
       <div class="sect-7-content">
         <p class="sect-6-text text-justify">
-          Mengatur keuangan dengan baik bisa mengantarkan kita untuk membuka bisnis. Apalagi  berdasarkan <span class="font-weight-bold pink-text">survei CewekBanget.ID</span>, <span class="font-weight-bold pink-text">633 remaja</span> ada yang sangat antusias untuk coba membuka bisnis di masa pandemi COVID-19.
+          Mengatur keuangan dengan baik bisa mengantarkan kita untuk membuka
+          bisnis. Apalagi berdasarkan
+          <span class="font-weight-bold pink-text">survei CewekBanget.ID</span>,
+          <span class="font-weight-bold pink-text">633 remaja</span> ada yang
+          sangat antusias untuk coba membuka bisnis di masa pandemi COVID-19.
           <br />
           <br />
-          Alasan mereka tertarik coba bisnis karena mau belajar soal bisnis dan enggak ingin menyusahkan orang tua lagi. Remaja yang sangat tertarik dengan untuk membuka bisnis ini sejalan dengan tema <span class="font-weight-bold orange-text">Global Money Week 2021</span> yakni <span class="font-weight-bold orange-text text-italic">Take care of yourself, take care of your money.</span>
+          Alasan mereka tertarik coba bisnis karena mau belajar soal bisnis dan
+          enggak ingin menyusahkan orang tua lagi. Remaja yang sangat tertarik
+          dengan untuk membuka bisnis ini sejalan dengan tema
+          <span class="font-weight-bold orange-text"
+            >Global Money Week 2021</span
+          >
+          yakni
+          <span class="font-weight-bold orange-text text-italic"
+            >Take care of yourself, take care of your money.</span
+          >
         </p>
         <img
           class="sect-7-img"
@@ -395,6 +408,47 @@
           alt=""
           srcset=""
         />
+      </div>
+      <div class="sect-7-content">
+        <img
+          src="/img/section-7/online-store-img@2x.png"
+          class="online-store-img-desktop"
+          alt=""
+          srcset=""
+        />
+        <div class="sect-7-5-content-wrapper">
+          <img
+            src="/img/section-7/card-rahmadanty-mobile@2x.png"
+            alt=""
+            srcset=""
+            class="sect-7-card-img card-rahmadanty-mobile"
+          />
+          <img
+            src="/img/section-7/card-rahmadanty@2x.png"
+            alt=""
+            srcset=""
+            class="sect-7-card-img card-rahmadanty-desktop"
+          />
+          <img
+            src="/img/section-7/online-store-img@2x.png"
+            class="online-store-img-mobile"
+            alt=""
+            srcset=""
+          />
+          <p class="sect-6-text text-right">
+            Keinginan mereka untuk
+            <span class="font-weight-bold">tidak menyusahkan orang tua</span>
+            selama pandemi bahkan terlihat berdasarkan
+            <span class="font-weight-bold">survei CewekBanget.ID</span> kemarin.
+            <br />
+            <br />
+            Sebanyak 273
+            <span class="font-weight-bold">remaja memiliki bisnis baru</span>
+            dalam waktu
+            <span class="font-weight-bold">12 bulan terakhir.</span> Keren
+            banget!
+          </p>
+        </div>
       </div>
     </section>
   </body>
