--- a/index.html
+++ b/index.html
@@ -451,5 +451,26 @@
         </div>
       </div>
     </section>
+    <section class="section-8 text-center heading-sub">
+      <p class="heading-sub orange-text">
+        Bagaimana Cara Remaja <br> Menambah Pemasukan Finansial?
+      </p>
+      <img src="/img/section-8/card-jo-img@2x.png" class="sect-7-card-img" alt="" srcset="">
+      <div class="sect-8-card-container">
+        <img class="sect-8-card-img" src="/img/section-8/left-card@2x.png" alt="" srcset="">
+        <div class="horizontal-spacer"></div>
+        <img class="sect-8-card-img" src="/img/section-8/right-card@2x.png" alt="" srcset="">
+      </div>
+      <div class="sect-8-text-wrapper">
+        <p class="heading-sub sect-6-text">
+          Meski begitu, kita harus tetap bersaing dengan remaja lain yang juga berbisnis.
+          <br>
+          <br>
+          Kuncinya yakin dan jangan hantui pikiran kita dengan kekhawatiran yang belum tentu terjadi. Sebab, terlalu khawatir juga enggak baik, lho.
+        </p>
+      </div>
+      <img src="/img/section-8/sarah-card@2x.png" class="sect-7-card-img" alt="" srcset="">
+      <img src="/img/section-8/steps-img@2x.png" alt="" srcset="" class="sect-7-card-img" >
+    </section>
   </body>
 </html>
