section 9 desktop was added

--- a/index.html
+++ b/index.html
@@ -472,5 +472,23 @@
       <img src="/img/section-8/sarah-card@2x.png" class="sect-7-card-img" alt="" srcset="">
       <img src="/img/section-8/steps-img@2x.png" alt="" srcset="" class="sect-7-card-img" >
     </section>
+    <section class="section-9">
+      <img src="/img/section-9/heading-img@2x.png" class="section-9-heading-img" alt="" srcset="">
+      <div class="section-9-grid-container">
+        <div class="sect-9-left-grid">
+          <img class="section-9-q-img" src="/img/section-9/Q1@2x.png" alt="" srcset="">
+          <img class="section-9-q-img" src="/img/section-9/Q3@2x.png" alt="" srcset="">
+          <img class="section-9-q-img" src="/img/section-9/A@2x.png" alt="" srcset="">
+          <img class="section-9-q-img" src="/img/section-9/C@2x.png" alt="" srcset="">
+        </div>
+        <div class="horizontal-spacer"></div>
+        <div class="sect-9-right-grid sect-grid">
+          <img class="section-9-q-img" src="/img/section-9/Q2@2x.png" alt="" srcset="">
+          <img class="section-9-q-img" src="/img/section-9/Q4@2x.png" alt="" srcset="">
+          <img class="section-9-q-img" src="/img/section-9/Q5@2x.png" alt="" srcset="">
+          <img class="section-9-q-img" src="/img/section-9/B@2x.png" alt="" srcset="">
+        </div>
+      </div>
+    </section>
   </body>
 </html>
