section 9 was added

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
     </section>
     <section class="section-9">
       <img src="/img/section-9/heading-img@2x.png" class="section-9-heading-img" alt="" srcset="">
-      <div class="section-9-grid-container">
+      <div class="section-9-grid-container sect-9-desktop">
         <div class="sect-9-left-grid">
           <img class="section-9-q-img" src="/img/section-9/Q1@2x.png" alt="" srcset="">
           <img class="section-9-q-img" src="/img/section-9/Q3@2x.png" alt="" srcset="">
@@ -488,6 +488,13 @@
           <img class="section-9-q-img" src="/img/section-9/Q5@2x.png" alt="" srcset="">
           <img class="section-9-q-img" src="/img/section-9/B@2x.png" alt="" srcset="">
         </div>
+      </div>
+      <div class="section-9-grid-container sect-9-mobile">
+        <img class="section-9-q-img" src="/img/section-9/Q1@2x.png" alt="" srcset="">
+        <img class="section-9-q-img" src="/img/section-9/Q2@2x.png" alt="" srcset="">
+        <img class="section-9-q-img" src="/img/section-9/Q3@2x.png" alt="" srcset="">
+        <img class="section-9-q-img" src="/img/section-9/Q4@2x.png" alt="" srcset="">
+        <img class="section-9-q-img" src="/img/section-9/Q5@2x.png" alt="" srcset="">
       </div>
     </section>
   </body>
