footer was added

--- a/index.html
+++ b/index.html
@@ -453,49 +453,185 @@
     </section>
     <section class="section-8 text-center heading-sub">
       <p class="heading-sub orange-text">
-        Bagaimana Cara Remaja <br> Menambah Pemasukan Finansial?
+        Bagaimana Cara Remaja <br />
+        Menambah Pemasukan Finansial?
       </p>
-      <img src="/img/section-8/card-jo-img@2x.png" class="sect-7-card-img" alt="" srcset="">
+      <img
+        src="/img/section-8/card-jo-img@2x.png"
+        class="sect-7-card-img"
+        alt=""
+        srcset=""
+      />
       <div class="sect-8-card-container">
-        <img class="sect-8-card-img" src="/img/section-8/left-card@2x.png" alt="" srcset="">
+        <img
+          class="sect-8-card-img"
+          src="/img/section-8/left-card@2x.png"
+          alt=""
+          srcset=""
+        />
         <div class="horizontal-spacer"></div>
-        <img class="sect-8-card-img" src="/img/section-8/right-card@2x.png" alt="" srcset="">
+        <img
+          class="sect-8-card-img"
+          src="/img/section-8/right-card@2x.png"
+          alt=""
+          srcset=""
+        />
       </div>
       <div class="sect-8-text-wrapper">
         <p class="heading-sub sect-6-text">
-          Meski begitu, kita harus tetap bersaing dengan remaja lain yang juga berbisnis.
-          <br>
-          <br>
-          Kuncinya yakin dan jangan hantui pikiran kita dengan kekhawatiran yang belum tentu terjadi. Sebab, terlalu khawatir juga enggak baik, lho.
+          Meski begitu, kita harus tetap bersaing dengan remaja lain yang juga
+          berbisnis.
+          <br />
+          <br />
+          Kuncinya yakin dan jangan hantui pikiran kita dengan kekhawatiran yang
+          belum tentu terjadi. Sebab, terlalu khawatir juga enggak baik, lho.
         </p>
       </div>
-      <img src="/img/section-8/sarah-card@2x.png" class="sect-7-card-img" alt="" srcset="">
-      <img src="/img/section-8/steps-img@2x.png" alt="" srcset="" class="sect-7-card-img" >
+      <img
+        src="/img/section-8/sarah-card@2x.png"
+        class="sect-7-card-img"
+        alt=""
+        srcset=""
+      />
+      <img
+        src="/img/section-8/steps-img@2x.png"
+        alt=""
+        srcset=""
+        class="sect-7-card-img"
+      />
     </section>
     <section class="section-9">
-      <img src="/img/section-9/heading-img@2x.png" class="section-9-heading-img" alt="" srcset="">
+      <img
+        src="/img/section-9/heading-img@2x.png"
+        class="section-9-heading-img"
+        alt=""
+        srcset=""
+      />
       <div class="section-9-grid-container sect-9-desktop">
         <div class="sect-9-left-grid">
-          <img class="section-9-q-img" src="/img/section-9/Q1@2x.png" alt="" srcset="">
-          <img class="section-9-q-img" src="/img/section-9/Q3@2x.png" alt="" srcset="">
-          <img class="section-9-q-img" src="/img/section-9/A@2x.png" alt="" srcset="">
-          <img class="section-9-q-img" src="/img/section-9/C@2x.png" alt="" srcset="">
+          <img
+            class="section-9-q-img"
+            src="/img/section-9/Q1@2x.png"
+            alt=""
+            srcset=""
+          />
+          <img
+            class="section-9-q-img"
+            src="/img/section-9/Q3@2x.png"
+            alt=""
+            srcset=""
+          />
+          <img
+            class="section-9-q-img"
+            src="/img/section-9/A@2x.png"
+            alt=""
+            srcset=""
+          />
+          <img
+            class="section-9-q-img"
+            src="/img/section-9/C@2x.png"
+            alt=""
+            srcset=""
+          />
         </div>
         <div class="horizontal-spacer"></div>
         <div class="sect-9-right-grid sect-grid">
-          <img class="section-9-q-img" src="/img/section-9/Q2@2x.png" alt="" srcset="">
-          <img class="section-9-q-img" src="/img/section-9/Q4@2x.png" alt="" srcset="">
-          <img class="section-9-q-img" src="/img/section-9/Q5@2x.png" alt="" srcset="">
-          <img class="section-9-q-img" src="/img/section-9/B@2x.png" alt="" srcset="">
+          <img
+            class="section-9-q-img"
+            src="/img/section-9/Q2@2x.png"
+            alt=""
+            srcset=""
+          />
+          <img
+            class="section-9-q-img"
+            src="/img/section-9/Q4@2x.png"
+            alt=""
+            srcset=""
+          />
+          <img
+            class="section-9-q-img"
+            src="/img/section-9/Q5@2x.png"
+            alt=""
+            srcset=""
+          />
+          <img
+            class="section-9-q-img"
+            src="/img/section-9/B@2x.png"
+            alt=""
+            srcset=""
+          />
         </div>
       </div>
       <div class="section-9-grid-container sect-9-mobile">
-        <img class="section-9-q-img" src="/img/section-9/Q1@2x.png" alt="" srcset="">
-        <img class="section-9-q-img" src="/img/section-9/Q2@2x.png" alt="" srcset="">
-        <img class="section-9-q-img" src="/img/section-9/Q3@2x.png" alt="" srcset="">
-        <img class="section-9-q-img" src="/img/section-9/Q4@2x.png" alt="" srcset="">
-        <img class="section-9-q-img" src="/img/section-9/Q5@2x.png" alt="" srcset="">
+        <img
+          class="section-9-q-img"
+          src="/img/section-9/Q1@2x.png"
+          alt=""
+          srcset=""
+        />
+        <img
+          class="section-9-q-img"
+          src="/img/section-9/Q2@2x.png"
+          alt=""
+          srcset=""
+        />
+        <img
+          class="section-9-q-img"
+          src="/img/section-9/Q3@2x.png"
+          alt=""
+          srcset=""
+        />
+        <img
+          class="section-9-q-img"
+          src="/img/section-9/Q4@2x.png"
+          alt=""
+          srcset=""
+        />
+        <img
+          class="section-9-q-img"
+          src="/img/section-9/Q5@2x.png"
+          alt=""
+          srcset=""
+        />
       </div>
     </section>
+    <footer class="footer">
+      <div class="clip-path-container"></div>
+      <div class="footer-content-container">
+        <div class="footer-heading">
+          <img src="/img/footer/arrow.png" alt="" srcset="" class="footer-arrow-img" />
+          <p class="heading-sub footer-heading-text">Back to Home</p>
+          <img src="/img/footer/cewek-banget-id.png" alt="" srcset="" class="footer-logo" />
+        </div>
+        <div class="footer-content text-center">
+          <div>
+            <p class="font-weight-bold">Content Writers</p>
+            <p>
+              Indah Permata Sari, Tiara Harum Pramesti.
+              <br>
+              Siti Fatimah Al Mukarramah
+            </p>
+          </div>
+          <div>
+            <p class="font-weight-bold">Editor</p>
+            <p>
+              Kinanti Nuke Mahardini
+            </p>
+          </div>
+          <div>
+            <p class="font-weight-bold">Web Designer</p>
+            <p>
+              Rafaela Theresa
+            </p>
+          </div>
+          <div>
+            <p class="font-weight-bold">Image Source</p>
+            <p>
+              iStockphoto.com
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
