first page animation was added

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </div>
         <div class="terminal-bg">
           <h1>
-            <span class="heading green-text heading-secondary"
+            <span class="heading green-text heading-secondary animate-moveInLeft"
               >Mind Your Own</span
             >
-            <span class="heading light-orange-text heading-primary"
+            <span class="heading light-orange-text heading-primary animate-moveInRight"
               >“Business”</span
             >
-            <span class="heading green-text heading-sub"
+            <span class="heading green-text heading-sub animate-moveInBottom"
               >Saatnya Evaluasi Diri dan Coba Bisnis Minim Modal!</span
             >
           </h1>
@@ -39,12 +39,12 @@
           alt=""
         />
         <img
-          class="sect-1-left-bot"
+          class="sect-1-left-bot animate-moveInBottom"
           src="./img/section-1/left-bot-img@2x.png"
           alt=""
         />
         <img
-          class="sect-1-right-bot"
+          class="sect-1-right-bot animate-moveInBottom"
           src="./img/section-1/right-bot-img@2x.png"
           alt=""
         />
