cloud animation was added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
       <div class="section-2-1">
         <h2 class="orange-text heading-secondary">Pandemi oh Pandemi</h2>
         <div class="section-2-1-wrapper">
-          <img src="/img/section-2/cloud@2x.png" alt="" class="cloud-md" />
+          <div class="cloud">
+            <img src="/img/section-2/cloud_plain.svg" alt="" class="cloud-md" />
+            <img src="/img/section-2/coin.svg" alt="" class="cloud__coin cloud__coin--left">
+            <img src="/img/section-2/coin.svg" alt="" class="cloud__coin cloud__coin--right">
+          </div>
           <div class="section-2-1-text-box">
             <p>
               Enggak terasa sudah satu tahun kita berada di fase asing dengan
@@ -87,11 +91,15 @@
               dari Sumatera Utara hingga Nusa Tenggara Timur.
             </p>
           </div>
-          <img
-            src="/img/section-2/cloud@2x.png"
-            alt=""
-            class="img-flipped cloud-right cloud-md"
-          />
+          <div class="cloud cloud-right">
+            <img
+              src="/img/section-2/cloud_plain.svg"
+              alt=""
+              class="img-flipped cloud-md "
+            />
+            <img src="/img/section-2/coin.svg" alt="" class="cloud__coin cloud__coin--left">
+            <img src="/img/section-2/coin.svg" alt="" class="cloud__coin cloud__coin--right">
+          </div>
         </div>
       </div>
       <div class="section-2-2">
