--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- JQUERY -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+      integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+      crossorigin="anonymous"
+    ></script>
     <!-- STYLE -->
+    <link rel="stylesheet" href="css/animations.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -22,10 +29,17 @@
         </div>
         <div class="terminal-bg">
           <h1>
-            <span class="heading green-text heading-secondary animate-moveInLeft"
+            <span
+              class="heading green-text heading-secondary animate-moveInLeft"
               >Mind Your Own</span
             >
-            <span class="heading light-orange-text heading-primary animate-moveInRight"
+            <span
+              class="
+                heading
+                light-orange-text
+                heading-primary
+                animate-moveInRight
+              "
               >“Business”</span
             >
             <span class="heading green-text heading-sub animate-moveInBottom"
@@ -56,8 +70,16 @@
         <div class="section-2-1-wrapper">
           <div class="cloud">
             <img src="/img/section-2/cloud_plain.svg" alt="" class="cloud-md" />
-            <img src="/img/section-2/coin.svg" alt="" class="cloud__coin cloud__coin--left">
-            <img src="/img/section-2/coin.svg" alt="" class="cloud__coin cloud__coin--right">
+            <img
+              src="/img/section-2/coin.svg"
+              alt=""
+              class="cloud__coin cloud__coin--left"
+            />
+            <img
+              src="/img/section-2/coin.svg"
+              alt=""
+              class="cloud__coin cloud__coin--right"
+            />
           </div>
           <div class="section-2-1-text-box">
             <p>
@@ -95,35 +117,63 @@
             <img
               src="/img/section-2/cloud_plain.svg"
               alt=""
-              class="img-flipped cloud-md "
+              class="img-flipped cloud-md"
             />
-            <img src="/img/section-2/coin.svg" alt="" class="cloud__coin cloud__coin--left">
-            <img src="/img/section-2/coin.svg" alt="" class="cloud__coin cloud__coin--right">
+            <img
+              src="/img/section-2/coin.svg"
+              alt=""
+              class="cloud__coin cloud__coin--left"
+            />
+            <img
+              src="/img/section-2/coin.svg"
+              alt=""
+              class="cloud__coin cloud__coin--right"
+            />
           </div>
         </div>
       </div>
       <div class="section-2-2">
-        <img class="map-img" src="/img/section-2/Map_Indonesia@2x.png" alt="" />
+        <div class="animatedParent">
+          <img
+            class="map-img animated bounceInRight"
+            src="/img/section-2/Map_Indonesia@2x.png"
+            alt=""
+          />
+        </div>
       </div>
       <div class="section-2-3">
         <h2 class="orange-text heading-secondary">Dari Total 1046 Responden</h2>
-        <img src="/img/section-2/BAR_1@2x.png" alt="" class="bar-img" />
-        <img src="/img/section-2/BAR_2@2x.png" alt="" class="bar-img" />
+        <div class="animatedParent" data-sequence="500">
+          <img
+            src="/img/section-2/BAR_1@2x.png"
+            alt=""
+            class="bar-img animated rotateIn"
+            data-id="1"
+          />
+          <img
+            src="/img/section-2/BAR_2@2x.png"
+            alt=""
+            class="bar-img animated rotateInUpLeft"
+            data-id="2"
+          />
+        </div>
         <p class="orange-text heading-sub">
           Kondisi di atas relate banget dengan kita ya, girls
         </p>
       </div>
       <div class="section-2-4">
-        <img
-          class="chart-img"
-          src="/img/section-2/chart-desktop@2x.png"
-          alt=""
-        />
-        <img
-          class="chart-img-mobile"
-          src="/img/section-2/chart-mobile@2x.png"
-          alt=""
-        />
+        <div class="animatedParent">
+          <img
+            class="chart-img animated tada"
+            src="/img/section-2/chart-desktop@2x.png"
+            alt=""
+          />
+          <img
+            class="chart-img-mobile animated tada"
+            src="/img/section-2/chart-mobile@2x.png"
+            alt=""
+          />
+        </div>
       </div>
     </section>
     <section class="section-3">
@@ -148,11 +198,18 @@
           >
           melalui aplikasi di smartphone.
         </p>
-        <img
-          class="sect-3-1-img"
-          src="/img/section-3/computer-girl.png"
-          alt=""
-        />
+        <div class="computer-girl">
+          <img
+            class="sect-3-1-img"
+            src="/img/section-3/computer-girl-plain.svg"
+            alt=""
+          />
+          <img
+            src="/img/section-3/heart.svg"
+            alt=""
+            class="computer-girl__heart"
+          />
+        </div>
       </div>
       <div class="sect-3-1-wrapper">
         <img class="sect-3-1-img" src="/img/section-3/coffee-girl.png" alt="" />
@@ -174,26 +231,29 @@
           atau yang kita butuhkan.
         </p>
       </div>
-      <img
-        class="sect-3-card"
-        src="/img/section-3/setya-card.png"
-        alt=""
-        srcset=""
-      />
+      <div class="animatedParent">
+        <img
+          class="sect-3-card animated shakeUp"
+          src="/img/section-3/setya-card.png"
+          alt=""
+          srcset=""
+        />
+      </div>
     </section>
-    <section class="section-4 heading-sub">
+    <section class="section-4 heading-sub animatedParent" data-sequence="600">
       <div class="section-4-content">
-        <p class="heading-sub orange-text">
+        <p class="heading-sub orange-text animated bounceInRight" data-id="1">
           Kenapa Remaja Lebih Boros Saat Pandemi?
         </p>
-        <p class="sect-4-text">
+        <p class="sect-4-text animated bounceInLeft" data-id="2">
           Jonathan End yang merupakan ahli keuangan, menyebutkan ada dua faktor
           utama yang menyebabkan remaja bisa boros saat pandemi, yaitu rasa
           <span class="font-weight-bold">bosan</span> dan
           <span class="font-weight-bold">media sosial</span>.
         </p>
         <img
-          class="sect-3-card"
+          class="sect-3-card animated fadeInDown"
+          data-id="3"
           src="/img/section-4/card-1@2x.png"
           alt=""
           srcset=""
@@ -237,10 +297,11 @@
     <section class="section-5">
       <p class="heading-sub orange-text">Boros Terus Menerus?</p>
       <div class="sect-5-content-wrapper">
-        <div class="sect-5-content">
+        <div class="sect-5-content animatedParent" data-sequence="600">
           <img
-            class="sect-5-img-main"
+            class="sect-5-img-main animated swing"
             src="/img/section-5/left-img@2x.png"
+            data-id="1"
             alt=""
             srcset=""
           />
@@ -250,9 +311,9 @@
             alt=""
             srcset=""
           />
-
           <img
-            class="sect-5-img-main"
+            class="sect-5-img-main animated swing"
+            data-id="2"
             src="/img/section-5/right-img@2x.png"
             alt=""
             srcset=""
@@ -315,7 +376,7 @@
     </section>
     <section class="section-7 text-center heading-sub">
       <p class="heading-sub orange-text">Cara Mengatur Keuangan</p>
-      <div class="sect-7-content">
+      <div class="sect-7-content animatedParent">
         <p class="sect-6-text text-justify">
           Psikolog Sarah F Fathoni, M. Psi menjelaskan ada tabel manajemen
           finansial yang bisa dibuat dengan updating. <br />
@@ -323,7 +384,7 @@
           kebutuhan apa yang harus dibeli. Sisanya untuk menabung.
         </p>
         <img
-          class="sect-7-img"
+          class="sect-7-img animated fadeInRight"
           src="/img/section-7/cart-img@2x.png"
           alt=""
           srcset=""
@@ -501,42 +562,44 @@
         alt=""
         srcset=""
       />
-      <img
-        src="/img/section-8/steps-img@2x.png"
-        alt=""
-        srcset=""
-        class="sect-7-card-img"
-      />
+      <div class="animatedParent">
+        <img
+          src="/img/section-8/steps-img@2x.png"
+          alt=""
+          srcset=""
+          class="sect-7-card-img animated growIn"
+        />
+      </div>
     </section>
-    <section class="section-9">
+    <section class="section-9 animatedParent">
       <img
         src="/img/section-9/heading-img@2x.png"
-        class="section-9-heading-img"
+        class="section-9-heading-img animated tada"
         alt=""
         srcset=""
       />
-      <div class="section-9-grid-container sect-9-desktop">
+      <div class="section-9-grid-container sect-9-desktop animatedParent">
         <div class="sect-9-left-grid">
           <img
-            class="section-9-q-img"
+            class="section-9-q-img animated fadeInLeft"
             src="/img/section-9/Q1@2x.png"
             alt=""
             srcset=""
           />
           <img
-            class="section-9-q-img"
+            class="section-9-q-img animated fadeInLeft"
             src="/img/section-9/Q3@2x.png"
             alt=""
             srcset=""
           />
           <img
-            class="section-9-q-img"
+            class="section-9-q-img animated fadeInLeft"
             src="/img/section-9/A@2x.png"
             alt=""
             srcset=""
           />
           <img
-            class="section-9-q-img"
+            class="section-9-q-img animated fadeInLeft"
             src="/img/section-9/C@2x.png"
             alt=""
             srcset=""
@@ -545,25 +608,26 @@
         <div class="horizontal-spacer"></div>
         <div class="sect-9-right-grid sect-grid">
           <img
-            class="section-9-q-img"
+            class="section-9-q-img animated fadeInRight"
+            data-id="2"
             src="/img/section-9/Q2@2x.png"
             alt=""
             srcset=""
           />
           <img
-            class="section-9-q-img"
+            class="section-9-q-img animated fadeInRight"
             src="/img/section-9/Q4@2x.png"
             alt=""
             srcset=""
           />
           <img
-            class="section-9-q-img"
+            class="section-9-q-img animated fadeInRight"
             src="/img/section-9/Q5@2x.png"
             alt=""
             srcset=""
           />
           <img
-            class="section-9-q-img"
+            class="section-9-q-img animated fadeInRight"
             src="/img/section-9/B@2x.png"
             alt=""
             srcset=""
@@ -607,39 +671,44 @@
       <div class="clip-path-container"></div>
       <div class="footer-content-container">
         <div class="footer-heading">
-          <img src="/img/footer/arrow.png" alt="" srcset="" class="footer-arrow-img" />
+          <img
+            src="/img/footer/arrow.png"
+            alt=""
+            srcset=""
+            class="footer-arrow-img"
+          />
           <p class="heading-sub footer-heading-text">Back to Home</p>
-          <img src="/img/footer/cewek-banget-id.png" alt="" srcset="" class="footer-logo" />
+          <img
+            src="/img/footer/cewek-banget-id.png"
+            alt=""
+            srcset=""
+            class="footer-logo"
+          />
         </div>
         <div class="footer-content text-center">
           <div>
             <p class="font-weight-bold">Content Writers</p>
             <p>
               Indah Permata Sari, Tiara Harum Pramesti.
-              <br>
+              <br />
               Siti Fatimah Al Mukarramah
             </p>
           </div>
           <div>
             <p class="font-weight-bold">Editor</p>
-            <p>
-              Kinanti Nuke Mahardini
-            </p>
+            <p>Kinanti Nuke Mahardini</p>
           </div>
           <div>
             <p class="font-weight-bold">Web Designer</p>
-            <p>
-              Rafaela Theresa
-            </p>
+            <p>Rafaela Theresa</p>
           </div>
           <div>
             <p class="font-weight-bold">Image Source</p>
-            <p>
-              iStockphoto.com
-            </p>
+            <p>iStockphoto.com</p>
           </div>
         </div>
       </div>
     </footer>
+    <script src="/js/css3-animate-it.js"></script>
   </body>
 </html>
