quiz func for desktop was added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Document</title>
     <!-- JQUERY -->
     <script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
     <!-- MAIN JS FILE -->
     <script src="/js/main.js"></script>
     <!-- STYLE -->
@@ -583,17 +584,19 @@
         <div class="sect-9-left-grid">
           <div class="question-box" id="question-box-1">
             <div class="question-box__head">
-                1. Lebih senang berinteraksi dengan orang secara langsung atau enggak?
+              1. Lebih senang berinteraksi dengan orang secara langsung atau
+              enggak?
             </div>
             <div class="question-answers">
               <div class="question-answers__choice question-answers__choice--1">
-                A. Lebih suka bertemu langsung biar ngobrol banyak. 
+                A. Lebih suka bertemu langsung biar ngobrol banyak.
               </div>
               <div class="question-answers__choice question-answers__choice--1">
                 B. Lebih suka via mobile, jadi bisa di mana saja dan kapan saja.
               </div>
               <div class="question-answers__choice question-answers__choice--1">
-                C. Tergantung kebutuhan, kalau banyak yang harus dibicarakan lebih baik ketemu.
+                C. Tergantung kebutuhan, kalau banyak yang harus dibicarakan
+                lebih baik ketemu.
               </div>
             </div>
           </div>
@@ -618,8 +621,7 @@
         <div class="sect-9-right-grid sect-grid">
           <div class="question-box" id="question-box-2">
             <div class="question-box__head">
-            2. Mau coba bisnis, pertanyaan pertama yang muncul dalam pikiran:
-                
+              2. Mau coba bisnis, pertanyaan pertama yang muncul dalam pikiran:
             </div>
             <div class="question-answers">
               <div class="question-answers__choice question-answers__choice--2">
@@ -651,16 +653,26 @@
           </div>
           <div class="question-box" id="question-box-5">
             <div class="question-box__head">
-              5. Saat kerja kelompok di sekolah/kampus, kita biasanya bertugas jadi:
+              5. Saat kerja kelompok di sekolah/kampus, kita biasanya bertugas
+              jadi:
             </div>
             <div class="question-answers">
-              <div class="question-answers__choice question-answers__choice--5" id="question-5-choice-a">
+              <div
+                class="question-answers__choice question-answers__choice--5"
+                id="question-5-choice-a"
+              >
                 A. Ketua/wakil acara yang selalu ada saat rapat hingga evaluasi.
               </div>
-              <div class="question-answers__choice question-answers__choice--5" id="question-5-choice-b">
+              <div
+                class="question-answers__choice question-answers__choice--5"
+                id="question-5-choice-b"
+              >
                 B. Sekretaris/bendahara tapi sering jadi tim hore juga sih
               </div>
-              <div class="question-answers__choice question-answers__choice--5" id="question-5-choice-c">
+              <div
+                class="question-answers__choice question-answers__choice--5"
+                id="question-5-choice-c"
+              >
                 C. Urusan desain promo, dekorasi atau konsumsi.
               </div>
             </div>
@@ -668,24 +680,116 @@
         </div>
       </div>
       <div class="section-9-grid-container sect-9-mobile">
-        <div class="question-box">
+        <div class="question-box" id="question-box-1">
+          <div class="question-box__head">
+            1. Lebih senang berinteraksi dengan orang secara langsung atau
+            enggak?
+          </div>
+          <div class="question-answers">
+            <div class="question-answers__choice question-answers__choice--1">
+              A. Lebih suka bertemu langsung biar ngobrol banyak.
+            </div>
+            <div class="question-answers__choice question-answers__choice--1">
+              B. Lebih suka via mobile, jadi bisa di mana saja dan kapan saja.
+            </div>
+            <div class="question-answers__choice question-answers__choice--1">
+              C. Tergantung kebutuhan, kalau banyak yang harus dibicarakan lebih
+              baik ketemu.
+            </div>
+          </div>
+        </div>
+        <div class="question-box" id="question-box-2">
           <div class="question-box__head">
             2. Mau coba bisnis, pertanyaan pertama yang muncul dalam pikiran:
           </div>
           <div class="question-answers">
-            <div class="question-answers__choice">
+            <div class="question-answers__choice question-answers__choice--2">
               A. Akan jualan di mana?
             </div>
-            <div class="question-answers__choice">
+            <div class="question-answers__choice question-answers__choice--2">
               B. Tren sekarang itu apa?
             </div>
-            <div class="question-answers__choice">
+            <div class="question-answers__choice question-answers__choice--2">
               C. Apa yang bisa aku lakukan?
+            </div>
+          </div>
+        </div>
+        <div class="question-box" id="question-box-3">
+          <div class="question-box__head">
+            3. Mau belanja tapi tokonya jauh! Maka aku akan melakukan?
+          </div>
+          <div class="question-answers">
+            <div class="question-answers__choice question-answers__choice--3">
+              A. Enggak apa ke sana, yang penting bisa lihat produk langsung.
+            </div>
+            <div class="question-answers__choice question-answers__choice--3">
+              B. Via online ada deh. Aman kok.
+            </div>
+            <div class="question-answers__choice question-answers__choice--3">
+              C. Coba cari di toko terdekat dulu deh.
+            </div>
+          </div>
+        </div>
+        <div class="question-box" id="question-box-4">
+          <div class="question-box__head">
+            4. Sahabat ulang tahun, cocoknya kita kasih hadiah….?
+          </div>
+          <div class="question-answers">
+            <div class="question-answers__choice question-answers__choice--4">
+              A. Baju brand favoritnya di mall.
+            </div>
+            <div class="question-answers__choice question-answers__choice--4">
+              B. Hampers lucu dan aesthetic via online shop.
+            </div>
+            <div class="question-answers__choice question-answers__choice--4">
+              C. Lukisan atau karikatur potret sahabat terus dibingkai deh!
+            </div>
+          </div>
+        </div>
+        <div class="question-box" id="question-box-5">
+          <div class="question-box__head">
+            5. Saat kerja kelompok di sekolah/kampus, kita biasanya bertugas
+            jadi:
+          </div>
+          <div class="question-answers">
+            <div
+              class="question-answers__choice question-answers__choice--5"
+              id="question-5-choice-a"
+            >
+              A. Ketua/wakil acara yang selalu ada saat rapat hingga evaluasi.
+            </div>
+            <div
+              class="question-answers__choice question-answers__choice--5"
+              id="question-5-choice-b"
+            >
+              B. Sekretaris/bendahara tapi sering jadi tim hore juga sih
+            </div>
+            <div
+              class="question-answers__choice question-answers__choice--5"
+              id="question-5-choice-c"
+            >
+              C. Urusan desain promo, dekorasi atau konsumsi.
             </div>
           </div>
         </div>
       </div>
     </section>
+    <!-- DIALOGS -->
+    <div id="dialog-a" class="modal">
+      <div class="modal-wrapper">
+        <img src="/img/section-9/A@2x.png" alt="" class="dialog-img" />
+      </div>
+    </div>
+    <div id="dialog-b" class="modal">
+      <div class="modal-wrapper">
+        <img src="/img/section-9/B@2x.png" alt="" class="dialog-img" />
+      </div>
+    </div>
+    <div id="dialog-c" class="modal">
+      <div class="modal-wrapper">
+        <img src="/img/section-9/C@2x.png" alt="" class="dialog-img" />
+      </div>
+    </div>
     <footer class="footer">
       <div class="clip-path-container"></div>
       <div class="footer-content-container">
