quiz func for mobile was added

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
       />
       <div class="section-9-grid-container sect-9-desktop animatedParent">
         <div class="sect-9-left-grid">
-          <div class="question-box" id="question-box-1">
+          <div class="question-box question-box-1">
             <div class="question-box__head">
               1. Lebih senang berinteraksi dengan orang secara langsung atau
               enggak?
@@ -600,7 +600,7 @@
               </div>
             </div>
           </div>
-          <div class="question-box" id="question-box-3">
+          <div class="question-box question-box-3">
             <div class="question-box__head">
               3. Mau belanja tapi tokonya jauh! Maka aku akan melakukan?
             </div>
@@ -619,7 +619,7 @@
         </div>
         <div class="horizontal-spacer"></div>
         <div class="sect-9-right-grid sect-grid">
-          <div class="question-box" id="question-box-2">
+          <div class="question-box question-box-2">
             <div class="question-box__head">
               2. Mau coba bisnis, pertanyaan pertama yang muncul dalam pikiran:
             </div>
@@ -635,7 +635,7 @@
               </div>
             </div>
           </div>
-          <div class="question-box" id="question-box-4">
+          <div class="question-box question-box-4">
             <div class="question-box__head">
               4. Sahabat ulang tahun, cocoknya kita kasih hadiah….?
             </div>
@@ -651,27 +651,24 @@
               </div>
             </div>
           </div>
-          <div class="question-box" id="question-box-5">
+          <div class="question-box question-box-5">
             <div class="question-box__head">
               5. Saat kerja kelompok di sekolah/kampus, kita biasanya bertugas
               jadi:
             </div>
             <div class="question-answers">
               <div
-                class="question-answers__choice question-answers__choice--5"
-                id="question-5-choice-a"
+                class="question-answers__choice question-answers__choice--5 question-5-choice-a"
               >
                 A. Ketua/wakil acara yang selalu ada saat rapat hingga evaluasi.
               </div>
               <div
-                class="question-answers__choice question-answers__choice--5"
-                id="question-5-choice-b"
+                class="question-answers__choice question-answers__choice--5 question-5-choice-b"
               >
                 B. Sekretaris/bendahara tapi sering jadi tim hore juga sih
               </div>
               <div
-                class="question-answers__choice question-answers__choice--5"
-                id="question-5-choice-c"
+                class="question-answers__choice question-answers__choice--5 question-5-choice-c"
               >
                 C. Urusan desain promo, dekorasi atau konsumsi.
               </div>
@@ -680,7 +677,7 @@
         </div>
       </div>
       <div class="section-9-grid-container sect-9-mobile">
-        <div class="question-box" id="question-box-1">
+        <div class="question-box question-box-1">
           <div class="question-box__head">
             1. Lebih senang berinteraksi dengan orang secara langsung atau
             enggak?
@@ -698,7 +695,7 @@
             </div>
           </div>
         </div>
-        <div class="question-box" id="question-box-2">
+        <div class="question-box question-box-2">
           <div class="question-box__head">
             2. Mau coba bisnis, pertanyaan pertama yang muncul dalam pikiran:
           </div>
@@ -714,7 +711,7 @@
             </div>
           </div>
         </div>
-        <div class="question-box" id="question-box-3">
+        <div class="question-box question-box-3">
           <div class="question-box__head">
             3. Mau belanja tapi tokonya jauh! Maka aku akan melakukan?
           </div>
@@ -730,7 +727,7 @@
             </div>
           </div>
         </div>
-        <div class="question-box" id="question-box-4">
+        <div class="question-box question-box-4">
           <div class="question-box__head">
             4. Sahabat ulang tahun, cocoknya kita kasih hadiah….?
           </div>
@@ -746,27 +743,24 @@
             </div>
           </div>
         </div>
-        <div class="question-box" id="question-box-5">
+        <div class="question-box question-box-5">
           <div class="question-box__head">
             5. Saat kerja kelompok di sekolah/kampus, kita biasanya bertugas
             jadi:
           </div>
           <div class="question-answers">
             <div
-              class="question-answers__choice question-answers__choice--5"
-              id="question-5-choice-a"
+              class="question-answers__choice question-answers__choice--5 question-5-choice-a"
             >
               A. Ketua/wakil acara yang selalu ada saat rapat hingga evaluasi.
             </div>
             <div
-              class="question-answers__choice question-answers__choice--5"
-              id="question-5-choice-b"
+              class="question-answers__choice question-answers__choice--5 question-5-choice-b"
             >
               B. Sekretaris/bendahara tapi sering jadi tim hore juga sih
             </div>
             <div
-              class="question-answers__choice question-answers__choice--5"
-              id="question-5-choice-c"
+              class="question-answers__choice question-answers__choice--5 question-5-choice-c"
             >
               C. Urusan desain promo, dekorasi atau konsumsi.
             </div>
