--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     </section>
     <section class="section-6 heading-sub text-center">
       <p class="heading-sub orange-text">
-        Kenapa Remaja Lebih Boros Saat Pandemi?
+        Atur Keuangan dan/atau Tambah Pemasukan!
       </p>
       <div class="sect-6-content">
         <div class="sect-6-content-card-container">
