change request was fully implemented

--- a/index.html
+++ b/index.html
@@ -527,26 +527,16 @@
         Bagaimana Cara Remaja <br />
         Menambah Pemasukan Finansial?
       </p>
-      <img
-        src="/img/section-8/card-jo-img@2x.png"
-        class="sect-7-card-img"
-        alt=""
-        srcset=""
-      />
-      <div class="sect-8-card-container">
+      <div class="section-8-card">
         <img
-          class="sect-8-card-img"
-          src="/img/section-8/left-card@2x.png"
+          src="/img/section-8/card-jo-plain@2x.png"
+          class="sect-7-card-img"
           alt=""
           srcset=""
         />
-        <div class="horizontal-spacer"></div>
-        <img
-          class="sect-8-card-img"
-          src="/img/section-8/right-card@2x.png"
-          alt=""
-          srcset=""
-        />
+        <div class="section-8-rounded-btn">
+          <img id="btn-jo" class="section-8-rounded-btn__text" src="/img/section-8/click-me@2x.png"></img>
+        </div>
       </div>
       <div class="sect-8-text-wrapper">
         <p class="heading-sub sect-6-text">
@@ -558,19 +548,16 @@
           belum tentu terjadi. Sebab, terlalu khawatir juga enggak baik, lho.
         </p>
       </div>
-      <img
-        src="/img/section-8/sarah-card@2x.png"
-        class="sect-7-card-img"
-        alt=""
-        srcset=""
-      />
-      <div class="animatedParent">
+      <div class="section-8-card">
         <img
-          src="/img/section-8/steps-img@2x.png"
+          src="/img/section-8/card-sarah-plain@2x.png"
+          class="sect-7-card-img"
           alt=""
           srcset=""
-          class="sect-7-card-img animated growIn"
         />
+        <div class="section-8-rounded-btn">
+          <img id="btn-sarah" class="section-8-rounded-btn__text" src="/img/section-8/click-me@2x.png"></img>
+        </div>
       </div>
     </section>
     <section class="section-9 animatedParent">
@@ -771,17 +758,42 @@
     <!-- DIALOGS -->
     <div id="dialog-a" class="modal">
       <div class="modal-wrapper">
-        <img src="/img/section-9/A@2x.png" alt="" class="dialog-img" />
+        <div class="dialog-img-wrapper">
+          <img src="/img/section-9/A@2x.png" alt="" class="dialog-img" />
+          <img src="/img/dialog/close-icon.png" alt="" class="dialog-close" />
+        </div>
       </div>
     </div>
     <div id="dialog-b" class="modal">
       <div class="modal-wrapper">
-        <img src="/img/section-9/B@2x.png" alt="" class="dialog-img" />
+        <div class="dialog-img-wrapper">
+          <img src="/img/section-9/B@2x.png" alt="" class="dialog-img" />
+          <img src="/img/dialog/close-icon.png" alt="" class="dialog-close" />
+        </div>
       </div>
     </div>
     <div id="dialog-c" class="modal">
       <div class="modal-wrapper">
-        <img src="/img/section-9/C@2x.png" alt="" class="dialog-img" />
+        <div class="dialog-img-wrapper">
+          <img src="/img/section-9/C@2x.png" alt="" class="dialog-img" />
+          <img src="/img/dialog/close-icon.png" alt="" class="dialog-close" />
+        </div>
+      </div>
+    </div>
+    <div id="dialog-jo" class="modal">
+      <div class="modal-wrapper">
+        <div class="dialog-img-wrapper">
+          <img src="/img/section-8/jo-dialog-img@2x.png" alt="" class="dialog-img" />
+          <img src="/img/dialog/close-icon.png" alt="" class="dialog-close" />
+        </div>
+      </div>
+    </div>
+    <div id="dialog-sarah" class="modal">
+      <div class="modal-wrapper">
+        <div class="dialog-img-wrapper">
+          <img src="/img/section-8/steps-img@2x.png" alt="" class="dialog-img" />
+          <img src="/img/dialog/close-icon.png" alt="" class="dialog-close" />
+        </div>
       </div>
     </div>
     <footer class="footer">
